test/corpus/fail/M0066.mo
=========
M0066.mo
=========

ignore ().1

---

(source_file
  (exp_dec
    (ignore_exp
      (proj_exp_block
        (par_exp)
        (int_literal)))))
